--- a/index.html
+++ b/index.html
@@ -15,8 +15,38 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello weather world</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather-wrapper">
+        <h1>New York, NY, USA</h1>
+        <ul>
+          <li>Saturday 12:00</li>
+          <li>clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="sunny"
+            />
+            12°C | F°
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Precipitation: 0 %</li>
+              <li>Humidity: 30%</li>
+              <li>Wind: 4 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        This project is
+        <a
+          href="https://github.com/MariaLizMatthaeus/vanilla-weather-app-SheCodes-final-project"
+          target="_blank"
+          >open-source code
+        </a>
+        by Maria Matthäus</small
+      >
     </div>
     <script src="src/app.js"></script>
   </body>
