--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Vanillla Weather App: SheCodes final project</title>
   </head>
@@ -26,10 +27,10 @@
       <div class="weather-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>New York, NY, USA</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Saturday 12:00</li>
-              <li>clear</li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
@@ -41,16 +42,15 @@
                   class="float-left"
                 />
                 <span class="float-left">
-                  <strong>12</strong>
+                  <strong id="temperature"></strong>
                   <span class="units">°C | <a href="#">°F</a></span>
                 </span>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0 %</li>
-                <li>Humidity: 30%</li>
-                <li>Wind: 4 km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>km/h</li>
               </ul>
             </div>
           </div>
