updated time with live data and minor letter capitalization fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Saturday 12:00</li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
@@ -49,8 +49,8 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span>km/h</li>
+                <li>Humidity: <span id="humidity"></span> %</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
