added unit conversion and minor styling optimization

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                 <img src="" alt="sunny" class="float-left" id="icon" />
                 <span class="float-left">
                   <strong id="temperature"></strong>
-                  <span class="units">°C | <a href="#">°F</a></span>
+                  <span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
                 </span>
               </div>
             </div>
@@ -76,8 +79,8 @@
           <a
             href="https://github.com/MariaLizMatthaeus/vanilla-weather-app-SheCodes-final-project"
             target="_blank"
-            >open-source code
-          </a>
+            >open-source code</a
+          >
           by Maria Matthäus</small
         >
       </div>
