--- a/index.html
+++ b/index.html
@@ -73,23 +73,8 @@
               </ul>
             </div>
           </div>
-          <hr>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class=weather-forecast-date>
-                Sun</div>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="partly cloudy"
-                  width="40"
-                />
-                <div class="weather-forecast-temperatures">
-                <span class="weather-forecast-temperature-max">&#8593 4°</span> 
-                | <span class="weather-forecast-temperature-min">&#8595 1°</span> </div>
-              </div>
-            </div>
-          </div>
+          <hr />
+          <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
           This project is
