inserted one call api including the forecast and connected it to former function

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             target="_blank"
             >open-source code</a
           >
-          by Maria Matthäus</small
+          by Maria Matthäus with 🖤</small
         >
       </div>
     </div>
