--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                   <strong id="temperature"></strong>
                   <span class="units"
                     ><a href="#" id="celsius-link" class="active">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a></span
+                    <a href="#" id="fahrenheit-link" class="inactive"
+                      >°F</a
+                    ></span
                   >
                 </span>
               </div>
@@ -74,16 +76,26 @@
             </div>
           </div>
           <hr />
+
           <div class="weather-forecast" id="forecast"></div>
         </div>
-        <small>
+        <small class="credits">
           This project is
           <a
             href="https://github.com/MariaLizMatthaeus/vanilla-weather-app-SheCodes-final-project"
             target="_blank"
             >open-source code</a
           >
-          by Maria Matthäus with 🖤</small
+          hosted on <a href="https://www.netlify.com/">Netlify</a> coded by
+          Maria Matthäus with 🖤 and caring support by
+          <a href="https://www.shecodes.io/"> SheCodes</a>
+          <div>
+            image credits:
+            <a
+              href="https://pixabay.com/illustrations/abstract-dust-background-wallpaper-5719221/"
+              >Tomislav Jakupec</a
+            >
+          </div></small
         >
       </div>
     </div>
