added search icons

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                 <input
                   type="search"
                   placeholder="Search for a city ..."
-                  class="form-control"
+                  class="form-control border-end-0 border"
                   id="city-input"
                   autocomplete="off"
                 />
-                <div class="input-group-append">
+                <span class="input-group-append">
                   <button
-                    class="btn btn-secondary"
+                    class="btn btn-large"
                     type="submit"
                     id="search-button"
                   >
                     <i class="fas fa-search fa-2x"></i>
                   </button>
-                </div>
+                </span>
                 <div class="col-2">
                   <button
                     type="button"
